# CMake-Boilerplate

./: .gitignore  README.md
basic/02-3rdPartyLibrary/: CMakeLists.txt  readme.md
basic/02-3rdPartyLibrary/src/: CMakeLists.txt  main.cpp
