cmake_minimum_required(VERSION 3.0)
project("cvtest")
message(" Projrct Name "${PROJECT_MNAME})
find_package( OpenCV REQUIRED )
message(STATUS "OpenCV library status: ${OPENCV_FOUND}")
message(STATUS "    config: ${OpenCV_DIR}")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
if( OPENCV_FOUND )
    include_directories( ${OpenCV_INCLUDE_DIRS} )
    link_directories( OpenCV_LIBS )
endif()

include_directories(${PROJECT_SOURCE_DIR}/src)
enable_testing()
add_subdirectory(${PROJECT_SOURCE_DIR}/src)