CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT( cvnonfree)
MESSAGE(" Projrct Name "${PROJECT_MNAME})
FIND_PACKAGE( OpenCV REQUIRED )
MESSAGE(STATUS "OpenCV library status: ${OPENCV_FOUND}")
MESSAGE(STATUS "    config: ${OpenCV_DIR}")
MESSAGE(STATUS "    version: ${OpenCV_VERSION}")
MESSAGE(STATUS "    libraries: ${OpenCV_LIBS}")
MESSAGE(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
INCLUDE_DIRECTORIES(${${OpenCV_INCLUDE_DIRS}}/src)
#enable_testing()
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)